[package]
name = "tomlfuse"
version = "0.0.1"
edition = "2021"
rust-version = "1.73.0"
description = """
Easily bind toml fields into properly typed build-time constants with flexible patterns and hierarchies.
"""
authors = ["orgrinrt <orgrinrt@ikiuni.dev>", "Hiisi Digital Oy <ort@hiisi.digital>"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["toml", "build-time", "constant", "proc-macro"]
categories = ["development-tools", "config"]
documentation = "https://docs.rs/tomlfuse"
homepage = "https://github.com/orgrinrt/tomlfuse"
repository = "https://github.com/orgrinrt/tomlfuse"

[dev-dependencies]
tempfile = "3.19.1"

[lib]
proc-macro = true

[dependencies]
toml = { version = "^0.8" }
proc-macro2 = { version = "^1.0" }
quote = { version = "^1.0" }
syn = { version = "^2.0" }
globset = "^0.4"
once_cell = { version = "^1.21", features = ["std"] }

# NOTE: below metadata is for test purposes only

# this comment should end up in the metadata module's documentation string
[package.metadata]
# this comment should end up in the FOO constant's documentation string
foo = "bar"

#
#
#
# this comment should end up in the defaults module's documentation string
#
# it should handle multiline comments too
[package.metadata.defaults]
# this comment should end up in the VALUE constant's documentation string
# and also it should support multiline
# comments
value = 1
